419 Final :: fixed based on Rubric
FEAT: added new layout based on Rubric

--- a/ceit419/final/index.html
+++ b/ceit419/final/index.html
@@ -164,7 +164,7 @@
                             </p>
                         </span>
                         <span>
-                            <a href="#">
+                            <a href="https://github.com/taschekuller/quickq-fe" target="_blank">
                                 <img src="assets/projects/readMore.svg" alt="Read More">
                             </a>
                         </span>
@@ -187,7 +187,7 @@
                             </p>
                         </span>
                         <span>
-                            <a href="#">
+                            <a href="https://github.com/taschekuller/RN_Mobile_Translator" target="_blank"> 
                                 <img src="assets/projects/readMore.svg" alt="Read More">
                             </a>
                         </span>
@@ -202,129 +202,101 @@
         </section>
         <!-- Projects Section -->
 
-        <!-- About Me Section -->
-        <section class="aboutMeContainer">
-            <div class="row">
-                <div class="col-md-6 col-sm-12">
-                    <div class="aboutMeImage">
-                        <img src="assets/aboutMe/aboutMe.svg" alt="About Me">
-                    </div>
-                </div>
+  <!-- About Me Section -->
+<section class="aboutMeContainer">
+    <div class="aboutMeGrid">
+        <div class="aboutMeImage">
+            <img src="assets/aboutMe/aboutMe.svg" alt="About Me">
+        </div>
+        <div class="aboutMeContent">
+            <h2>About <span>Me</span></h2>
+            <p>
+                I am Ibrahim Dogukan İnce, a passionate software engineer with a strong academic background in Computer
+                Education and Instructional Technology, complemented by a minor in Computational Science and Engineering
+                at Middle East Technical University. I have cultivated expertise in modern technologies like React.js,
+                Firebase, Python, and MongoDB, and I thrive on solving complex problems and bringing innovative ideas to
+                life. From developing cross-platform mobile applications using React Native to modernizing systems with
+                Firebase, I focus on creating efficient and impactful solutions. My design skills, coupled with my
+                technical expertise, enable me to transform Figma-based concepts into responsive, user-friendly
+                interfaces.
+            </p>
+        </div>
+    </div>
+</section>
+<!-- About Me Section -->
 
-                <div class="col-md-6 col-sm-12">
-                    <div class="aboutMeContent">
-                        <h2>About <span>Me</span></h2>
-                        <p>
-                            I am Ibrahim Dogukan İnce, a passionate software engineer with a strong academic background
-                            in Computer Education and Instructional Technology, complemented by a minor in Computational
-                            Science and Engineering at Middle East Technical University. I have cultivated expertise in
-                            modern technologies like React.js, Firebase, Python, and MongoDB, and I thrive on solving
-                            complex problems and bringing innovative ideas to life. From developing cross-platform
-                            mobile applications using React Native to modernizing systems with Firebase, I focus on
-                            creating efficient and impactful solutions. My design skills, coupled with my technical
-                            expertise, enable me to transform Figma-based concepts into responsive, user-friendly
-                            interfaces.
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- About Me Section -->
 
         <!-- Experience Section -->
         <section class="experienceContainer">
-            <div class="row experienceSectionHeader">
+            <div class="experienceSectionHeader">
                 <h2>My <span>Experience</span></h2>
             </div>
 
-            <div class="row experienceCard">
-                <div class="row experienceHeader">
-                    <div class="headerLeft">
-                        <div class="headerLogo">
-                            <img src="./assets/experience/dataBoss.jpg" />
-                        </div>
-                        <div class="headerTitle">
-                            <p>Software Engineer</p>
-                        </div>
-                    </div>
-                    <div class="headerRight">
-                        <div class="headerDate">
-                            <p>Agu 2024 - Present</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="row experienceContent">
-                    <p>
-                        Developed a mobile application using React Native and Expo during an internship, focused on
-                        building cross-platform
-                        functionality and integrating backend communication via Axios.
-                        The app supported multiple input types, including image capture via camera and photo library,
-                        and file uploads for .docx
-                        and text formats, with outputs displayed dynamically on the screen.
-                    </p>
-                </div>
-            </div>
-            <div class="row experienceCard">
-                <div class="row experienceHeader">
-                    <div class="headerLeft">
-                        <div class="headerLogo">
-                            <img src="./assets/experience/inzva.jpg" />
-                        </div>
-                        <div class="headerTitle">
-                            <p>Participant</p>
-                        </div>
-                    </div>
-                    <div class="headerRight">
-                        <div class="headerDate">
-                            <p>Agu 2024 - Nov 2024</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="row experienceContent">
-                    <p>
-                        Participated in the inzva Deep Learning Study Group 24, collaborating with peers to explore
-                        advanced concepts in deep learning.
-                        Engaged in hands-on sessions to implement neural network architectures and solve real-world
-                        machine learning problems using PyTorch.
-                        Applied deep learning techniques to practical projects, enhancing my understanding of topics
-                        like convolutional neural networks, recurrent neural networks, and transfer learning.
-                    </p>
-                </div>
-            </div>
-            <div class="row experienceCard">
-                <div class="row experienceHeader">
-                    <div class="headerLeft">
-                        <div class="headerLogo">
-                            <img src="./assets/experience/morrie.jpg" />
-                        </div>
-                        <div class="headerTitle">
-                            <p>Software Engineer</p>
-                        </div>
-                    </div>
-                    <div class="headerRight">
-                        <div class="headerDate">
-                            <p>Apr 2024 - Jul 2024</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="row experienceContent">
-                    <p>
-                        Developed WordPress sites, including integrating plugins to enhance site functionality. Designed
-                        UI and layout using
-                        Figma, and implemented the design by developing in WordPress, ensuring a user-friendly interface
-                        Utilized Google Analytics, collected and visualized page statistics from monthly +10k visitors
-                        and data, ensuring
-                        insights were easily accessible for decision-making.
-                    </p>
-                </div>
-            </div>
+            <table class="experienceTable">
+                <thead>
+                    <tr>
+                        <th>Role</th>
+                        <th>Company</th>
+                        <th>Duration</th>
+                        <th>Details</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Software Engineer</td>
+                        <td>
+                            <div class="companyInfo">
+                                <img src="./assets/experience/dataBoss.jpg" alt="Data Boss Logo" />
+                                <span>Data Boss</span>
+                            </div>
+                        </td>
+                        <td>Aug 2024 - Present</td>
+                        <td>
+                            Developed a mobile application using React Native and Expo during an internship, focused on
+                            building
+                            cross-platform functionality and integrating backend communication via Axios.
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Participant</td>
+                        <td>
+                            <div class="companyInfo">
+                                <img src="./assets/experience/inzva.jpg" alt="Inzva Logo" />
+                                <span>Inzva</span>
+                            </div>
+                        </td>
+                        <td>Aug 2024 - Nov 2024</td>
+                        <td>
+                            Participated in the inzva Deep Learning Study Group 24, collaborating with peers to explore
+                            advanced
+                            concepts in deep learning and solve real-world problems using PyTorch.
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Software Engineer</td>
+                        <td>
+                            <div class="companyInfo">
+                                <img src="./assets/experience/morrie.jpg" alt="Morrie Logo" />
+                                <span>Morrie</span>
+                            </div>
+                        </td>
+                        <td>Apr 2024 - Jul 2024</td>
+                        <td>
+                            Developed WordPress sites, integrated plugins, designed UI in Figma, and enhanced site
+                            functionality
+                            for over 10k monthly visitors.
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
         </section>
         <!-- Experience Section -->
+
 
         <!-- Contact Section -->
         <section class="contactSection">
             <div class="row">
-                <div class="col-md-6 col-sm-12 contactFormContainer">
+                <div class="contactFormContainer">
                     <div class="contactForm">
                         <form>
                             <input type="text" placeholder="Name">
@@ -334,40 +306,36 @@
                         <span class="contactButtons">
                             <a href="#" class="contactSend">Send Message</a>
                             <span class="contactSocialLinks">
-                                <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                                <a href="#"><i class="fab fa-github"></i></a>
+                                <a href="https://www.linkedin.com/in/i-dogukan-ince/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                                <a href="https://github.com/taschekuller" target="_blank"><i class="fab fa-github"></i></a>
                             </span>
 
                         </span>
                     </div>
                 </div>
 
-                <div class="col-md-6 col-sm-12 ">
-                    <div class="contactInfoContainer">
-                        <h2>Contact with <span>Me</span></h2>
-                        <p class="contactDescription">
-                            I am always open to new opportunities and collaborations. If you have any questions or would
-                            like to discuss a project, feel free to reach out to me. I am looking forward to hearing
-                            from
-                            you!
-                        </p>
-                        <ul class="contactInfo">
-                            <li><i class="fas fa-map-marker-alt"></i>
-                                <span>Ankara, Turkey</span>
-                            </li>
-                            <li>
-                                <i class="fas fa-envelope"></i>
-                                <a href="mailto:idogukanince@gmail.com">idogukanince@gmail.com</a>
-                            </li>
-                            <li>
-                                <i class="fas fa-phone-alt"></i>
-                                <a href="tel:+905555555555">+90 555 555 55 55</a>
-                            </li>
-                        </ul>
-                    </div>
-
+                <div class="contactInfoContainer">
+                    <h2>Contact with <span>Me</span></h2>
+                    <p class="contactDescription" id="contactDetails">
+                        I am always open to new opportunities and collaborations. If you have any questions or would
+                        like to discuss a project, feel free to reach out to me. I am looking forward to hearing
+                        from
+                        you!
+                    </p>
+                    <ul class="contactInfo">
+                        <li><i class="fas fa-map-marker-alt"></i>
+                            <span>Ankara, Turkey</span>
+                        </li>
+                        <li>
+                            <i class="fas fa-envelope"></i>
+                            <a href="mailto:idogukanince@gmail.com">idogukanince@gmail.com</a>
+                        </li>
+                        <li>
+                            <i class="fas fa-phone-alt"></i>
+                            <a href="tel:+905555555555">+90 555 555 55 55</a>
+                        </li>
+                    </ul>
                 </div>
-
 
             </div>
         </section>
@@ -377,8 +345,8 @@
     <!-- Footer -->
     <footer class="footerContainer">
         <div class="row">
-                <p>Taschekuller</p>
-                <p><span>&copy;</span>2024 Dogukan Ince. All Rights Reserved.</p>
+            <p>Taschekuller</p>
+            <p><span>&copy;</span>2024 Dogukan Ince. All Rights Reserved.</p>
         </div>
     <!-- Footer -->
 
